--- a/index.html
+++ b/index.html
@@ -95,8 +95,6 @@
       color: #4CAF50;
       font-weight: bold;
     }
-
-    /* Pavé numérique personnalisé */
     #customPricePopup {
       display: none;
       position: fixed;
@@ -136,10 +134,7 @@
   </style>
 </head>
 <body>
-
 <h1>Rendu Monnaie</h1>
-
-<!-- PAGE PRINCIPALE -->
 <div id="pagePrincipale">
   <div class="champ">
     <label>Choix ticket</label>
@@ -151,7 +146,6 @@
       </div>
     </div>
   </div>
-
   <div class="champ">
     <label>Nombre de tickets</label>
     <div class="row">
@@ -166,7 +160,6 @@
       </div>
     </div>
   </div>
-
   <div class="champ">
     <label>Somme donnée</label>
     <div class="row">
@@ -186,13 +179,10 @@
       </div>
     </div>
   </div>
-
   <div class="actions">
     <button class="cal" onclick="calculer()">Cal</button>
   </div>
 </div>
-
-<!-- PAGE RESULTAT -->
 <div id="pageResultat" style="display:none">
   <div class="resultat-page">
     <p id="resultatTotal"></p>
@@ -201,8 +191,6 @@
     <button onclick="resetForm()">Zero</button>
   </div>
 </div>
-
-<!-- PAVÉ NUMÉRIQUE -->
 <div id="customPricePopup">
   <div id="customPriceDisplay">0</div>
   <div class="numpad">
@@ -222,7 +210,6 @@
   <br/>
   <button onclick="validerCustom()" style="width:100%;padding:10px;font-size:1.5em;background:#2E7D32;color:white;border:none;border-radius:8px;margin-top:10px">Valider</button>
 </div>
-
 <script>
   let ticketType = 1.3;
   let currentQuantite = 1;
@@ -254,6 +241,7 @@
     let val = parseFloat(document.getElementById('customPriceDisplay').innerText);
     if (!isNaN(val) && val > 0) {
       selectTicket(val);
+      document.getElementById('btnPerso').innerText = `Perso (${val.toFixed(2)} €)`;
       document.getElementById('customPricePopup').style.display = 'none';
     } else {
       alert("Montant invalide.");
@@ -288,9 +276,7 @@
     const somme = getSommeActuelle();
     const total = ticketType * currentQuantite;
     const rendu = somme - total;
-
     document.getElementById('resultatTotal').innerText = `Total à payer : ${total.toFixed(2)} €`;
-
     if (rendu >= 0) {
       document.getElementById('resultatRenduLabel').innerText = "Monnaie à rendre :";
       document.getElementById('resultatRenduValeur').innerText = `${rendu.toFixed(2)} €`;
@@ -298,19 +284,18 @@
       document.getElementById('resultatRenduLabel').innerText = "Somme insuffisante :";
       document.getElementById('resultatRenduValeur').innerText = `- ${Math.abs(rendu).toFixed(2)} €`;
     }
-
     document.getElementById('pagePrincipale').style.display = 'none';
     document.getElementById('pageResultat').style.display = 'block';
   }
 
   function resetForm() {
     selectTicket(1.3);
+    document.getElementById('btnPerso').innerText = 'Perso';
     resetQuantite();
     resetSomme();
     document.getElementById('pageResultat').style.display = 'none';
     document.getElementById('pagePrincipale').style.display = 'block';
   }
 </script>
-
 </body>
 </html>
